<resources>
    <string name="app_name">booking</string>
    <string name="skip">Skip</string>
    <string name="login">Login</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="quantity">Qy.</string>
    <string name="back">Back</string>
    <string name="unit">Unit</string>
    <string name="description">Description</string>
    <string name="rate">Rate</string>
    <string name="amount">Amount</string>
    <string name="textview">Food Name</string>
    <string name="name">Food Name</string>
    <string name="price">Price</string>
</resources>
